--- a/src/main/resources/templates/auth/create.html
+++ b/src/main/resources/templates/auth/create.html
@@ -2,9 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>register</title>
+
+    <link rel="stylesheet" th:href="@{/css/register.css}">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&family=Red+Hat+Display&display=swap"
+            rel="stylesheet">
 </head>
 <body>
+<div class="container">
+    <div class="login-text">
+        <h3>Create User</h3>
+    </div>
 
+    <div class="login-input">
+        <form th:action="@{/auth/create}" method="post" enctype="multipart/form-data" >
+
+            <label>
+                <input type="text" placeholder="Enter Admin name" name="username">
+            </label>
+
+            <label>
+                <input type="text" placeholder="Enter Admin Password" name="password">
+            </label>
+
+            <label>
+                <input type="text" placeholder="Enter Admin Email" name="email">
+            </label>
+
+            <label>
+                <input type="radio" name="role_name" value="Admin"> ADMIN
+                <input type="radio" name="role_name" value="Manager"> MANAGER
+                <input type="radio" name="role_name" value="Employee"> EMPLOYEE
+            </label>
+
+            <div class="login-button">
+                <button type="submit">Save</button>
+            </div>
+        </form>
+    </div>
+</div>
 </body>
 </html>
