--- a/src/main/resources/templates/organization/list.html
+++ b/src/main/resources/templates/organization/list.html
@@ -18,7 +18,7 @@
             <tr th:each="organization,iter : ${organizations}">
                 <td th:text="${iter.count}"></td>
                 <td th:utext="${organization.getName()}"></td>
-                <td th:utext="${organization.getOwner().getUsername()}"></td>
+                <td th:utext="${organization.getOwner()}"></td>
                 <td>✅
                     <a th:href="@{/organization/delete/{id}/(id=${organization.id})}">🗑</a>
                     <a th:href="@{/organization/update/{id}/(id=${organization.id})}"> ✏ </a>
