--- a/src/main/resources/templates/auth/create_admin.html
+++ b/src/main/resources/templates/auth/create_admin.html
@@ -43,6 +43,10 @@
                 <input type="text" placeholder="Enter Admin Email" name="email">
             </label>
 
+            <label>
+                <input type="file" name="image" accept=".jpg, .jpeg, .png, .img" multiple/>
+            </label>
+
             <div class="login-button">
                 <button type="submit">Save</button>
             </div>
