--- a/src/main/resources/templates/organization/detail.html
+++ b/src/main/resources/templates/organization/detail.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:include="fragment.html :: header('Organization Detail Page')">
+</head>
 <body>
 <header>
-
+    <section th:include="fragment.html :: navbar"></section>
 </header>
 <main>
+
+    <h1>Detail Organization Page</h1>
     <div class="container">
         <div class="row">
-            <div class="col-6 offset-3">
-                <p class="h4" th:text="${organization.name}"></p>
-                <p class="h4" th:text="${organization.email}"></p>
-                <p class="h4" th:text="${organization.location}"></p>
-                <p class="h4" th:text="${organization.code}"></p>
-                <p class="h4" th:text="${organization.owner}"></p>
-                <img class="mr-3" width="120" height="180" th:src="@{${organization.logo}}"
-                     th:alt="${organization.name}"/>
-                <form method="get" th:action="@{/organization/list}">
-                    <button type="submit" class="btn btn-warning">Back</button>
-                </form>
+            <div class="col-4 mx-auto">
+                <ul>
+                    <li> class="h4" th:text="${organization.name}"</li>
+                    <li> class="h4" th:text="${organization.email}"</li>
+                    <li> class="h4" th:text="${organization.location}"</li>
+                    <li> class="h4" th:text="${organization.code}"</li>
+                    <li> class="h4" th:text="${organization.owner}"</li>
+                </ul>
             </div>
         </div>
     </div>
