--- a/src/main/resources/templates/auth/unblock.html
+++ b/src/main/resources/templates/auth/unblock.html
@@ -8,7 +8,7 @@
 </header>
 <main>
 
-    <h1>Delete User Page</h1>
+    <h1>Unblock User Page</h1>
     <div class="container">
         <div class="row">
             <div class="col-4 mx-auto">
