--- a/src/main/resources/templates/organization/delete.html
+++ b/src/main/resources/templates/organization/delete.html
@@ -20,7 +20,7 @@
                 </ul>
                 <form method="post" th:action="@{/organization/delete/{id}(id=${organization.id})}">
                     <button type="submit" class="btn btn-danger">Yes</button>
-                    <a th:href="@{/}" class="btn btn-warning">No</a>
+                    <a th:href="@{/organization/list}" class="btn btn-warning">No</a>
                 </form>
             </div>
         </div>
