--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -20,7 +20,26 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active" >
+                    <a class="nav-link" th:href="@{/admin}">Admin <span class="sr-only">(current)</span></a>
+                </li>
 
+                <li class="nav-item" >
+                    <a class="nav-link" th:href="@{/auth/register}">Register</a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" th:href="@{/auth/login}">Login</a>
+                </li>
+
+                <li class="nav-item" >
+                    <a class="nav-link" th:href="@{/auth/logout}">Logout</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0" >
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
     </nav>
 </section>
