--- a/src/main/resources/templates/organization/list.html
+++ b/src/main/resources/templates/organization/list.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="fragment.html :: header('Home Page')"></head>
+
+
+<head th:fragment="header(name)">
+    <meta charset="UTF-8">
+    <title th:text="${name}"></title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+
 <body class="myb">
 
+<header th:include="fragment.html :: navbar"></header>
 <div class="container">
     <div class="row">
         <table class="table">
@@ -34,7 +45,7 @@
             </tr>
             </tbody>
         </table>
-        <a th:href="@{/todo/create}" class="btn btn-success">➕ Add</a>
+        <a th:href="@{/organization/create}" class="btn btn-success">➕ Add</a>
     </div>
 </div>
 
