--- a/src/main/resources/templates/colum/create.html
+++ b/src/main/resources/templates/colum/create.html
@@ -17,34 +17,17 @@
 <body>
 <div class="container">
     <div class="login-text">
-        <h3>Create Admin</h3>
+        <h3>Create Organization</h3>
     </div>
 
     <div class="login-input">
-        <form th:action="@{/auth/create}" method="post" enctype="multipart/form-data" th:object="${organization}">
+        <form th:action="@{/colum/create}" method="post" enctype="multipart/form-data">
 
             <label>
-                <input type="text" placeholder="Enter Admin name" name="username">
+                <input type="text" placeholder="Enter organization name" name="name">
             </label>
-
-            <label>
-                <input type="text" placeholder="Enter Admin Password" name="password">
-            </label>
-
-            <label>
-                <input type="hidden" th:value="${organization.getId()}" name="organizationId">
-            </label>
-
-            <label>
-                <input type="hidden" th:value="Admin" name="role_name">
-            </label>
-
-            <label>
-                <input type="text" placeholder="Enter Admin Email" name="email">
-            </label>
-
             <div class="login-button">
-                <button type="submit">Save</button>
+                <button type="submit">➕ Save</button>
             </div>
         </form>
     </div>
