--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
         <h3>Login</h3>
         <p>Please login using account detail bellow.</p>
     </div>
-    <form th:action="@{/login}" th:method="POST">
+    <form th:action="@{/auth/login}" th:method="POST">
         <div class="login-input">
             <label>
                 <input type="text" name="username" placeholder="username">
