--- a/src/main/resources/templates/project/list.html
+++ b/src/main/resources/templates/project/list.html
@@ -31,7 +31,7 @@
             </tr>
             </tbody>
         </table>
-        <a th:href="@{/project/create}" class="btn btn-success">➕ Add</a>
+        <a th:href="@{/project/create}" class="btn btn-success">Project Add</a>
     </div>
 </div>
 
