--- a/src/main/resources/templates/colum/create.html
+++ b/src/main/resources/templates/colum/create.html
@@ -17,14 +17,17 @@
 <body>
 <div class="container">
     <div class="login-text">
-        <h3>Create Organization</h3>
+        <h3>Create Colum</h3>
     </div>
 
     <div class="login-input">
         <form th:action="@{/colum/create}" method="post" enctype="multipart/form-data">
 
             <label>
-                <input type="text" placeholder="Enter organization name" name="name">
+                <input type="text" placeholder="Enter colum name" name="name">
+            </label>
+            <label>
+                <input type="hidden" th:value="${projectId}" name="projectId">
             </label>
             <div class="login-button">
                 <button type="submit">➕ Save</button>
