--- a/src/main/resources/templates/auth/create.html
+++ b/src/main/resources/templates/auth/create.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="login-input">
-        <form th:action="@{/auth/create}" method="post" enctype="multipart/form-data">
+        <form th:action="@{/auth/create}" method="post" enctype="multipart/form-data" th:object="${admin}">
 
             <label>
                 <input type="text" placeholder="Enter user name" name="username">
@@ -33,6 +33,10 @@
 
             <label>
                 <input type="file" name="image" accept=".jpg, .jpeg, .png, .img" multiple/>
+            </label>
+
+            <label>
+                <input type="hidden" th:value="${admin.organizationId}" name="organizationId">
             </label>
 
             <label>
