--- a/src/main/resources/templates/auth/create_admin.html
+++ b/src/main/resources/templates/auth/create_admin.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="login-input">
-        <form th:action="@{/auth/create}" method="post" enctype="multipart/form-data" th:object="${organization}">
+        <form th:action="@{/auth/createAdmin}" method="post" enctype="multipart/form-data" th:object="${organization}">
 
             <label>
                 <input type="text" placeholder="Enter Admin name" name="username">
