--- a/src/main/resources/templates/auth/create.html
+++ b/src/main/resources/templates/auth/create.html
@@ -2,58 +2,130 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>register</title>
-
-    <link rel="stylesheet" th:href="@{/css/register.css}">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&family=Red+Hat+Display&display=swap"
-            rel="stylesheet">
+    <title>Title</title>
 </head>
+
+<!--<link rel="stylesheet" th:href="@{/css/createUser.css}">-->
+
+<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+<style type="text/css">
+    .form-style-8 {
+        font-family: 'Open Sans Condensed', arial, sans, serif;
+        width: 500px;
+        padding: 30px;
+        background: #FFFFFF;
+        margin: 50px auto;
+        box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.22);
+        -moz-box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.22);
+        -webkit-box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.22);
+
+    }
+
+    .form-style-8 h2 {
+        background: #4D4D4D;
+        text-transform: uppercase;
+        font-family: 'Open Sans Condensed', sans-serif;
+        color: #797979;
+        font-size: 18px;
+        font-weight: 100;
+        padding: 20px;
+        margin: -30px -30px 30px -30px;
+    }
+
+    .form-style-8 input[type="text"],
+    .form-style-8 input[type="date"],
+    .form-style-8 input[type="datetime"],
+    .form-style-8 input[type="email"],
+    .form-style-8 input[type="number"],
+    .form-style-8 input[type="search"],
+    .form-style-8 input[type="time"],
+    .form-style-8 input[type="url"],
+    .form-style-8 input[type="password"],
+    .form-style-8 textarea,
+    .form-style-8 select {
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        outline: none;
+        display: block;
+        width: 100%;
+        padding: 7px;
+        border: none;
+        border-bottom: 1px solid #ddd;
+        background: transparent;
+        margin-bottom: 10px;
+        font: 16px Arial, Helvetica, sans-serif;
+        height: 45px;
+    }
+
+    .form-style-8 textarea {
+        resize: none;
+        overflow: hidden;
+    }
+
+    .form-style-8 input[type="button"],
+    .form-style-8 input[type="submit"] {
+        -moz-box-shadow: inset 3px 1px 2px 1px #45D6D6;
+        -webkit-box-shadow: inset 1px 1px 1px 1px #45D6D6;
+        box-shadow: inset 1px 1px 1px 1px #45D6D6;
+        background-color: #2CBBBB;
+        border: 1px solid #27A0A0;
+        display: inline-block;
+        cursor: pointer;
+        color: #FFFFFF;
+        font-family: 'Open Sans Condensed', sans-serif;
+        font-size: 14px;
+        padding: 8px 18px;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
+
+    .form-style-8 input[type="button"]:hover,
+    .form-style-8 input[type="submit"]:hover {
+        background: #34CACA linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
+    }
+</style>
 <body>
-<div class="container">
-    <div class="login-text">
-        <h3>Create User</h3>
-    </div>
+<div class="form-style-8">
+    <h2 style="color: #2e3cfb">Create user</h2>
+    <form th:action="@{/auth/create}" method="post" enctype="multipart/form-data" th:object="${admin}">
+        <label>
+            <input type="text" name="username" placeholder="username"/>
+        </label>
+        <label>
+            <input type="text" name="password" placeholder="Password"/>
+        </label>
+        <label>
+            <input type="email" name="email" placeholder="Email"/>
+        </label>
+        <label>
+            <input type="hidden" th:value="${admin.organizationId}" name="organizationId">
+        </label>
+        <label>
+            <select id="role">
+                <option name="role_name" value="Admin">Admin</option>
+                <option name="role_name" value="Manager">Manager</option>
+                <option name="role_name" value="Employee">Employee</option>
+            </select>
+        </label>
 
-    <div class="login-input">
-        <form th:action="@{/auth/create}" method="post" enctype="multipart/form-data" th:object="${admin}">
-
-            <label>
-                <input type="text" placeholder="Enter user name" name="username">
-            </label>
-
-            <label>
-                <input type="text" placeholder="Enter user Password" name="password">
-            </label>
-
-            <label>
-                <input type="file" name="image" accept=".jpg, .jpeg, .png, .img" multiple/>
-            </label>
-
-            <label>
-                <input type="hidden" th:value="${admin.organizationId}" name="organizationId">
-            </label>
-
-            <label>
-                <input type="text" placeholder="Enter user Email" name="email">
-            </label>
-
-            <label>
-                <input type="radio" name="role_name" value="Admin"> ADMIN
-                <input type="radio" name="role_name" value="Manager"> MANAGER
-                <input type="radio" name="role_name" value="Employee"> EMPLOYEE
-            </label>
-
-            <div class="login-button">
-                <button type="submit">Save</button>
-            </div>
-        </form>
-    </div>
+        <label>
+            <input type="file" name="image" placeholder="image"/>
+        </label>
+        <br>
+        <br>
+        <div style="color: #2e3cfb; text-align: right">
+            <button type="submit">➕ Save</button>
+        </div>
+    </form>
 </div>
+
+<script type="text/javascript">
+    function adjust_textarea(h) {
+        h.style.height = "20px";
+        h.style.height = (h.scrollHeight) + "px";
+    }
+</script>
+
 </body>
 </html>
