--- a/src/main/resources/templates/auth/detail.html
+++ b/src/main/resources/templates/auth/detail.html
@@ -3,16 +3,14 @@
 <head th:include="fragment.html :: header('Organization Delete Page')">
 </head>
 <body>
-<header>
-    <section th:include="fragment.html :: navbar"></section>
-</header>
+
 <main>
 
     <h1>Detail User Page</h1>
     <div class="container">
         <div class="row">
             <main>
-                <img th:src="@{/assets/imges/logo}" alt="not found">
+                <img src="../assets/imges/logo.png" alt="not found">
             </main>
             <div class="col-4 mx-auto">
                 <ul>
