--- a/src/main/resources/templates/organization/delete.html
+++ b/src/main/resources/templates/organization/delete.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="fragment.html :: header('Organization Delete Page')">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Log out</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&family=Red+Hat+Display&display=swap"
+            rel="stylesheet">
+
+    <link rel="stylesheet" th:href="@{/css/logout.css}">
 </head>
 <body>
-<header>
-    <section th:include="fragment.html :: navbar"></section>
-</header>
-<main>
+<div class="container">
+    <h3>Delete organization</h3>
 
-    <h1>Delete Organization Page</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col-4 mx-auto">
-                <ul>
-                    <li th:text="${organization.logo}"></li>
-                    <li th:text="${organization.name}"></li>
-                    <li th:text="${organization.email}"></li>
-                    <li th:text="${organization.code}"></li>
-                </ul>
-                <form method="post" th:action="@{/organization/delete/{id}(id=${organization.id})}">
-                    <button type="submit" class="btn btn-danger">Yes</button>
-                    <a th:href="@{/organization/list}" class="btn btn-warning">No</a>
-                </form>
-            </div>
-        </div>
+
+    <div class="btn">
+        <a th:href="@{/organization/list/}">
+            <button type="submit">No</button>
+        </a>
+        <form method="post" th:href="@{/organization/delete/{id}(id=${organization.id})}">
+
+            <button type="submit">Yes
+            </button>
+
+        </form>
     </div>
-</main>
-<footer>
-    <section th:include="fragment.html :: js-files"></section>
-</footer>
+
+</div>
 </body>
 </html>
+
