--- a/src/main/resources/templates/organization/unblock.html
+++ b/src/main/resources/templates/organization/unblock.html
@@ -18,16 +18,15 @@
 <div class="container">
     <h3>Unblock organization</h3>
 
-    <form method="post" th:action="@{/organization/block/{id}(id=${organization.id})}">
+    <div class="btn">
+        <a th:href="@{/organization/list/}">
+            <button type="submit">No</button>
+        </a>
 
-        <div class="btn">
-            <a th:href="@{/organization/list}">
-                <button type="submit">No</button>
-            </a>
+        <form method="post" th:href="@{/organization/unblock/{id}(id=${organization.id})}">
             <button type="submit">Yes</button>
-        </div>
-
-    </form>
+        </form>
+    </div>
 </div>
 </body>
 </html>
